--- a/views/pokemon.ejs
+++ b/views/pokemon.ejs
@@ -1,37 +1,60 @@
 <%- include("template/cabecera", {tituloWeb: "Pokemon"}) %>
 
 <div class="container">
-    <h1>CRUD MongoDB</h1>
-    <a class="btn btn-success btn-block my-4" href="/pokemon/crear">Crear nuevo Pokémon</a>
+  <h1>CRUD MongoDB</h1>
+  <a class="btn btn-success btn-block my-4" href="/pokemon/crear"
+    >Crear nuevo Pokémon</a
+  >
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Tipo</th>
-                <th scope="col">Descripción</th>
-                <th scope="col">Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% if (arrayPokemon.length > 0) {%>
-            
-                <% arrayPokemon.forEach(pokemon => {%>
-        
-            <tr>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Descripción</th>
+        <th scope="col">Editar</th>
+        <th scope="col">Eliminar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if (arrayPokemon.length > 0) {%>
+         <% arrayPokemon.forEach(pokemon => {%>
+
+              <tr>
                 <th scope="row"><%= pokemon.id %></th>
                 <td><%= pokemon.nombre %></td>
                 <td><%= pokemon.tipo %></td>
                 <td><%= pokemon.descripcion %></td>
-                <td><a class="btn btn-warning btn-sm" href="pokemon/<%= pokemon._id %>">Editar/Eliminar</a></td>
-            </tr>
-            <% }) %>
-            <% } %>
-        </tbody>
-    </table>
+                <td>
+                  <a class="btn btn-warning btn-sm" href="pokemon/<%= pokemon._id %>">Editar</a>
+                </td>
+                <td>
+                  <a class="btn btn-danger btn-sm" id="eliminar<%= pokemon._id %>" href="pokemon/<%= pokemon._id %>">Eliminar</a>
+                </td>
+              </tr>
+              <script>
+                document.getElementById('eliminar<%= pokemon._id %>').addEventListener('click', async () => {
+                    try{
+                        const data = await fetch(`/pokemon/<%= pokemon._id %>`, {method: 'delete'})
+                        const res = await data.json()
+                        console.log(res)
+                        if(res.estado){
+                          window.location.href = '/pokemon'
+                        }else {
+                            console.log(res)
+                        }
+                    }catch(error){
+                        console.log(error)
+                    }
+                })
+              </script>
+          <% }) %> 
+        <% } %>
+    </tbody>
+  </table>
 </div>
 
-
-
 <%- include("template/footer") %>
+
+
